quick css fix for mailchimp footer button alignment on full screen when logged in

--- a/sites/all/themes/project_clear/css/projectclear.css
+++ b/sites/all/themes/project_clear/css/projectclear.css
@@ -3594,6 +3594,10 @@ form#mailchimp-lists-user-subscribe-form-leasily-launch-subscribers{
 		width: 80%;
 	}
 	
+	.mailFull .block-mailchimp-lists-leasily-launch-subscribers button{
+		margin-top: 0em;
+	}
+	
 	.footerForm .large-5.columns{
 		margin-top: 0;
 	}
